<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_conteo">

    <fragment
        android:id="@+id/nav_reconteo_bodega"
        android:name="ec.com.comohogar.inventario.ui.reconteobodega.ReconteoBodegaFragment"
        android:label="Reconteo"
        tools:layout="@layout/fragment_reconteo_bodega" />

    <fragment
        android:id="@+id/nav_conteo"
        android:name="ec.com.comohogar.inventario.ui.conteo.ConteoFragment"
        android:label="@string/menu_conteo"
        tools:layout="@layout/fragment_conteo" />

    <fragment
        android:id="@+id/nav_reconteo_local"
        android:name="ec.com.comohogar.inventario.ui.reconteolocal.ReconteoLocalFragment"
        android:label="Reconteo Local"
        tools:layout="@layout/fragment_reconteo_local" />

    <fragment
        android:id="@+id/nav_pendiente"
        android:name="ec.com.comohogar.inventario.ui.pendiente.ConsultaPendienteFragment"
        android:label="@string/menu_pendiente"
        tools:layout="@layout/fragment_pendiente" />

    <fragment
        android:id="@+id/nav_enviado"
        android:name="ec.com.comohogar.inventario.ui.enviado.ConsultaEnviadoFragment"
        android:label="@string/menu_enviados"
        tools:layout="@layout/fragment_enviado" />

    <fragment
        android:id="@+id/nav_error"
        android:name="ec.com.comohogar.inventario.ui.error.ConsultaErrorFragment"
        android:label="@string/menu_error"
        tools:layout="@layout/fragment_error" />

    <fragment
        android:id="@+id/nav_salir"
        android:name="ec.com.comohogar.inventario.ui.salida.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />

    <fragment
        android:id="@+id/nav_correccion"
        android:name="ec.com.comohogar.inventario.ui.correccion.CorreccionFragment"
        android:label="@string/menu_correccion"
        tools:layout="@layout/fragment_correccion" />

    <fragment
        android:id="@+id/nav_consulta_usuario"
        android:name="ec.com.comohogar.inventario.ui.consulta.ConsultaUsuariosFragment"
        android:label="@string/menu_consulta"
        tools:layout="@layout/fragment_consulta_usuario" />

    <fragment
        android:id="@+id/nav_consulta_conteo_usuario"
        android:name="ec.com.comohogar.inventario.ui.consultaconteo.ConsultaConteoUsuarioFragment"
        android:label="@string/menu_consulta"
        tools:layout="@layout/fragment_consulta_conteo_usuario" />
</navigation>