<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="ec.com.comohogar.inventario.ui.login.LoginViewModel" />

        <variable
            name="uiController"
            type="ec.com.comohogar.inventario.ui.login.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerInventario"
        app:layout_constraintTop_toBottomOf="@+id/spinnerInventario"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/titulo"
            style="@style/WizardPageTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Titulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="56dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="24dp"
            android:text="@string/ingresa_tu_n_mero_de_empleado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editUsuario"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_border"
            android:hint="@string/empleado"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="24dp"
            android:text="@string/seleccione_el_local"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUsuario" />

        <Spinner
            android:id="@+id/spinnerLocal"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/spinner_border"
            android:selectAllOnFocus="true"
            android:spinnerMode="dropdown"
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textInventario"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="24dp"
            android:text="@string/selecciona_el_inventario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerLocal" />

        <Spinner
            android:id="@+id/spinnerInventario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/spinner_border"
            android:selectAllOnFocus="true"
            android:spinnerMode="dropdown"
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInventario" />

        <TextView
            android:id="@+id/textConteo"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="24dp"
            android:text="@string/selecciona_el_conteo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerInventario" />

        <Spinner
            android:id="@+id/spinnerConteo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/spinner_border"
            android:selectAllOnFocus="true"
            android:spinnerMode="dropdown"
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textConteo" />

        <TextView
            android:id="@+id/versionName"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="360dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:justificationMode="inter_word"
            android:text="Versión"
            android:textColor="@color/text_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerConteo" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btnAnterior"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selectable_item_background"
                android:text="@string/anterior"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/btnSiguiente"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selectable_item_background"
                android:text="@string/ingresar"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>